--- a/templates/main.html
+++ b/templates/main.html
@@ -2,11 +2,31 @@
 {% block content %}
 <div id="headerwrap">
     <div class="container">
-      <div class="row centered">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h1>Мы делаем ботов</h1>
+        <div class="row centered">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1></h1>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
+<div id="dg">
+    <div class="container">
+        <div class="row centered">
+            <h4>Последние работы</h4>
+            <br>
+            <div class="col-lg-5 col-lg-offset-0">
+                <div class="tilt">
+                    <img src="/static/img/sample.png" alt="" ,
+                         height="400" , width="200">
+                </div>
+            </div>
+            <div class="col-lg-2 col-lg-offset-4">
+                <div class="tilt">
+                    <img src="/static/img/sample.png" alt="" ,
+                         height="400" , width="200">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
