--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/static/img/ico.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="static/css/bootstrap.css">
@@ -9,27 +10,36 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
 </head>
 <body>
-<div class="navbar navbar-fixed-top", style="background: transparent; font-color:black;">
+<div class="navbar navbar-inverse  navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <img src="/static/img/logo1.png" alt="здесь должна была быть картинка, но не нашлась", height=60", width="100">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/"><img src="/static/img/logo1.png" alt="здесь должна была быть картинка, но не нашлась" ,
+                             height=60", width="100"></a>
         </div>
+        <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li style="color: black;"><a href="#">Регестрация</a></li>
-                <li style="color: black;"><a href="#">Войти</a></li>
-                <li style="color: black;"><a href="#">О нас</a></li>
-                <li style="color: black;"><a href="#">Список ботов</a></li>
+                <li><a href="#">Регестрация</a></li>
+                <li><a href="#">Войти</a></li>
+                <li><a href="/about_us">О нас</a></li>
+                <li><a href="/list_bot">Список ботов</a></li>
             </ul>
+        </div>
     </div>
 </div>
 {% block content %}{% endblock %}
 <div class="contacts">
     <div class="container">
-        <div class="first">
-            <img src="/static/img/logo2.jpg" alt="здесь должна была быть картинка, но не нашлась", height="30", width="100">
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa fa-vk"></i></a>
-        </div>
+        <img style="margin-bottom:12px;" src="/static/img/logo2.jpg"
+             alt="здесь должна была быть картинка, но не нашлась" ,
+             height="30" , width="100">
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="https://vk.com/public193402549"><i class="fa fa fa-vk"></i></a>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
