Третья версия сайта. Изменения: 1.Добавлена регистрация. 2.Изменения языка на главной странице. 3.Мелькие фиксы.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,3 +65,11 @@ body{
   color:white;
   font-size: 20px;
 }
+.reg p{
+    margin-left:5%;
+    margin-right:5%;
+}
+.reg h1{
+    margin-left:5%;
+    margin-right:5%;
+}
