--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="dg">
     <div class="container">
-        <h1 style="padding-top:25%;margin-bottom:30%;">Этот проект создан учениками Яндекс лицей из города Саратова(Гаранин Дмитрий, Астафуров Даниил), главной спецификации проекта стало проектирование различных ботов в вк с различными возможностями, в данные момент идет активное программирование ботов.</h1>
+        <h1 style="padding-top:25%;margin-bottom:30%;">Этот проект создан учениками Яндекс лицей из города Саратова(Гаранин Дмитрий, Астафуров Данил), главной спецификации проекта стало проектирование различных ботов в вк с различными возможностями, в данные момент идет активное программирование ботов.</h1>
     </div>
 </div>
 {% endblock %}
