Версия сайта №4 Изменения: 1.Интеграция новой базы данных 2.Реализация начальной версии личного кабинета 3.Локализация на английский завершенна на 90%

--- a/templates/list_bot.html
+++ b/templates/list_bot.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="dg">
     <div class="container">
-        <h1 style="padding-top:50%;margin-bottom:30%;">В разработке</h1>
+        <h1 style="padding-top:50%;margin-bottom:30%;">{{data[lang]['ide']}}</h1>
     </div>
 </div>
 {% endblock %}
