--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
 <div id="dg">
     <div class="container">
         <div class="row centered">
-            <h4>Последние работы</h4>
+            <h4>{{data[lang]['lwor']}}</h4>
             <br>
             <div class="col-lg-5 col-lg-offset-0">
                 <div class="tilt">
