--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,8 @@
 {% extends "wrapper.html" %}
 {% block content %}
 <div class="reg">
-    <form action="" method="post" class="login" style="padding-top:10%;padding-bottom:10% ; background: #e0e0e0;    text-align: center;">
+    <form action="" method="post" class="login"
+          style="padding-top:10%;padding-bottom:10% ; background: #e0e0e0;    text-align: center;">
         <h1>Регистрация</h1>
         {{ form.hidden_tag() }}
         {{ form.csrf_token }}
@@ -54,6 +55,15 @@
             {{ form.Age.label }}<br>
             {{ form.Age(class="form-control") }}<br>
             {% for error in form.Age.errors %}
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>
+            {{ form.Vk_url.label }}<br>
+            {{ form.Vk_url(class="form-control") }}<br>
+            {% for error in form.Vk_url.errors %}
         <p class="alert alert-danger" role="alert">
             {{ error }}
         </p>
