--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "wrapper.html" %}
 {% block content %}
 <div class="reg" style="padding-top:20%;padding-bottom:20% ; background: #e0e0e0;    text-align: center;">
-    <h1>Authorizarion</h1>
+    <h1>{{data[lang]['auto']}}</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
