--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -1,16 +1,16 @@
 {% extends "wrapper.html" %}
 {% block content %}
 <div style="background:#e0e0e0; padding-top:10%;padding-bottom:20%">
-    <h1 style="  text-align: center;">Личный кабинет</h1>
+    <h1 style="  text-align: center;">{{data[lang]['parea']}}</h1>
     <div class="container">
         <img src="/static/img/tmp/img{{current_user.id}}.jpg" , height="300" , width="300">
         <div style="float:right;   font-size: 50px;">
-            <h2>Фамилия: {{current_user.surname}}</h2>
-            <h2>Имя: {{current_user.name}}</h2>
-            <h2>Возраст: {{current_user.age}}</h2>
-            <h2>Пол: {{current_user.gender}}</h2>
-            <h2>Дата регистрации: {{current_user.data_reg}}</h2>
-            <h2>Ссылка на вк: {{current_user.vk_url}}</h2>
+            <h2>{{data[lang]['lname']}} {{current_user.surname}}</h2>
+            <h2>{{data[lang]['fname']}} {{current_user.name}}</h2>
+            <h2>{{data[lang]['age']}} {{current_user.age}}</h2>
+            <h2>{{data[lang]['gen']}} {{current_user.gender}}</h2>
+            <h2>{{data[lang]['data']}} {{current_user.data_reg}}</h2>
+            <h2>{{data[lang]['vk']}} {{current_user.vk_url}}</h2>
         </div>
     </div>
 </div>
