--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -5,8 +5,8 @@
     <link rel="shortcut icon" href="/static/img/ico.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="static/css/bootstrap.css">
-    <link rel="stylesheet" href="static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
 </head>
 <body>
@@ -34,6 +34,7 @@
                 {% endif %}
                 <li><a href="/about_us">{{data[lang]['abo']}}</a></li>
                 <li><a href="/list_bot">{{data[lang]['libot']}}</a></li>
+                <li><a href="/list_bot">Отзывы</a></li>
             </ul>
         </div>
     </div>
@@ -47,14 +48,15 @@
         <a href="#"><i class="fa fa-instagram"></i></a>
         <a href="https://vk.com/public193402549"><i class="fa fa fa-vk"></i></a>
         <a href="/en"><img src="/static/img/en.jpg"
-             alt="здесь должна была быть картинка, но не нашлась" ,
-             height=20", width="33" style="float:right; margin-top:25px;"></a>
+                           alt="здесь должна была быть картинка, но не нашлась" ,
+                           height=20", width="33" style="float:right; margin-top:25px;"></a>
         <a href="/ru"><img src="/static/img/ru.png"
-             alt="здесь должна была быть картинка, но не нашлась" ,
-             height=20", width="33" style="margin-right:50px;float:right;margin-top:25px;"></a>
+                           alt="здесь должна была быть картинка, но не нашлась" ,
+                           height=20", width="33"
+                           style="margin-right:50px;float:right;margin-top:25px;"></a>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
