Начата работа над отзывами.

--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -34,7 +34,7 @@
                 {% endif %}
                 <li><a href="/about_us">{{data[lang]['abo']}}</a></li>
                 <li><a href="/list_bot">{{data[lang]['libot']}}</a></li>
-                <li><a href="/list_bot">Отзывы</a></li>
+                <li><a href="/reviews">Отзывы</a></li>
             </ul>
         </div>
     </div>
