Предрелизная версия сайта№6 1)Переделано хешиование пароля. 2)Сделан перевод на новых страницах. 3)Добавлено редактирование профиля. 4)Проведена работа над адаптивностю сайта на смартфонах. 5)Изменения в дизайне.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,3 +73,27 @@ body{
     margin-left:5%;
     margin-right:5%;
 }
+@media screen and (min-width: 601px) {
+.example {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+.example {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 601px) {
+.image {
+    height:20px;
+    width:33px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+.image {
+    height:10px;
+    width:20px;
+  }
+}
