--- a/templates/news.html
+++ b/templates/news.html
@@ -3,7 +3,7 @@
 <div class="reg">
     <form action="" method="post" class="login" enctype="multipart/form-data"
           style="padding-top:10%;padding-bottom:10% ; background: #e0e0e0;    text-align: center;">
-        <h1>Добавление новости</h1>
+        <h1>{{data[lang]['add_work']}}</h1>
         {{ form.hidden_tag() }}
         {{ form.csrf_token }}
         <p>
