--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -34,7 +34,7 @@
                 {% endif %}
                 <li><a href="/about_us">{{data[lang]['abo']}}</a></li>
                 <li><a href="/list_bot">{{data[lang]['libot']}}</a></li>
-                <li><a href="/reviews">Отзывы</a></li>
+                <li><a href="/reviews">{{data[lang]['reviews']}}</a></li>
             </ul>
         </div>
     </div>
@@ -49,10 +49,10 @@
         <a href="https://vk.com/public193402549"><i class="fa fa fa-vk"></i></a>
         <a href="/en"><img src="/static/img/en.jpg"
                            alt="здесь должна была быть картинка, но не нашлась" ,
-                           height=20", width="33" style="float:right; margin-top:25px;"></a>
+                           class="image" style="float:right; margin-top:25px;"></a>
         <a href="/ru"><img src="/static/img/ru.png"
                            alt="здесь должна была быть картинка, но не нашлась" ,
-                           height=20", width="33"
+                           class="image"
                            style="margin-right:50px;float:right;margin-top:25px;"></a>
     </div>
 </div>
