--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,11 +1,11 @@
 {% extends "wrapper.html" %}
 {% block content %}
 <div style="text-align: center;">
-    <h1 style="padding-top:50px;">Отзывы</h1>
+    <h1 style="padding-top:50px;">{{data[lang]['reviews']}}</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         {% if current_user.is_authenticated %}
-        <a href="/reviews_add" class="btn btn-warning">Добавить отзыв</a>
+        <a href="/reviews_add" class="btn btn-warning">{{data[lang]['add_review']}}</a>
         {% endif %}
         {{ form.bot.label }}
         {{form.bot}}
@@ -19,15 +19,42 @@
 {% for review in range(reviews_data|length) %}
 {% if review % 2 == 0 %}
 <div style="background: #e0e0e0;">
-    <h2 style="word-wrap: break-word;">Пользователь:{{reviews_data[review].user.name}} {{reviews_data[review].user.surname}}</h2>
-    <h2 style="word-wrap: break-word;">Название бота:{{reviews_data[review].name_bot}}</h2>
-    <h2 style="word-wrap: break-word;">Текст отзыва:{{reviews_data[review].text}}</h2>
+    <h2 style="word-wrap: break-word;">{{data[lang]['user']}}{{reviews_data[review].user.name}}
+        {{reviews_data[review].user.surname}}</h2>
+    <h2 style="word-wrap: break-word;">
+        {{data[lang]['name_bot']}}{{reviews_data[review].name_bot}}</h2>
+    <h2 style="word-wrap: break-word;">
+        {{data[lang]['review_text']}}{{reviews_data[review].text}}</h2>
+</div>
+<div>
+    {% if current_user.is_authenticated and current_user.id == 1%}
+    <div>
+        <a href="/reviews/{{ reviews_data[review].id }}"
+           class="btn btn-warning">{{data[lang]['change']}}</a>
+        <a href="/reviews_delete/{{ reviews_data[review].id }}"
+           class="btn btn-danger">{{data[lang]['delete']}}</a>
+    </div>
+    {% endif %}
 </div>
 {% else %}
 <div style="background: #ffffff;">
-    <h2 style="word-wrap: break-word;">Пользователь:{{reviews_data[review].user.name}} {{reviews_data[review].user.surname}}</h2>
-    <h2 style="word-wrap: break-word;">Название бота{{reviews_data[review].name_bot}}</h2>
-    <h2 style="word-wrap: break-word;">Текст отзыва:{{reviews_data[review].text}}</h2>
+    <h2 style="word-wrap: break-word;">{{data[lang]['user']}}{{reviews_data[review].user.name}}
+        {{reviews_data[review].user.surname}}</h2>
+    <h2 style="word-wrap: break-word;">
+        {{data[lang]['name_bot']}}{{reviews_data[review].name_bot}}</h2>
+    <h2 style="word-wrap: break-word;">
+        {{data[lang]['review_text']}}{{reviews_data[review].text}}</h2>
+
+</div>
+<div>
+    {% if current_user.is_authenticated and current_user.id == 1%}
+    <div>
+        <a href="/reviews/{{reviews_data[review].id  }}"
+           class="btn btn-warning">{{data[lang]['change']}}</a>
+        <a href="/reviews_delete/{{ reviews_data[review].id  }}"
+           class="btn btn-danger">{{data[lang]['delete']}}</a>
+    </div>
+    {% endif %}
 </div>
 {% endif %}
 {% endfor %}
