--- a/templates/change_reviews.html
+++ b/templates/change_reviews.html
@@ -3,7 +3,7 @@
 <div class="reg">
     <form action="" method="post" class="login"
           style="padding-top:10%;padding-bottom:10% ; background: #e0e0e0;    text-align: center;">
-        <h1>{{data[lang]['reg']}}</h1>
+        <h1>{{data[lang]['change']}}</h1>
         {{ form.hidden_tag() }}
         {{ form.csrf_token }}
         <p> {{ form.text.label }}{{form.text}}</p>
