--- a/templates/main.html
+++ b/templates/main.html
@@ -27,18 +27,21 @@
                     <div class="tilt">
                         <h2>{{user_list[user - 1].name_bot}}</h2>
                         <a href="{{user_list[user - 1].url}}"><img
-                                src="static\img\inews_tmp\{{user_list[user - 1].foto_id}}.jpg" alt="" ,
+                                src="static\img\inews_tmp\{{user_list[user - 1].foto_id}}.jpg" alt=""
+                                ,
                                 height="400" , width="200"></a>
                     </div>
-                    {% if current_user.is_authenticated and current_user.id == 1%}
+                    {% if current_user.is_authenticated%}
                     <a style="margin-top:15px;"
                        href="/reviews_add_one/{{ user_list[user - 1].id }}"
                        class="btn btn-info">{{data[lang]['add_review']}}</a>
+                    {% if current_user.is_authenticated and current_user.id == 1%}
                     <div>
                         <a href="/news/{{ user_list[user - 1].id }}" class="btn btn-warning">{{data[lang]['change']}}</a>
                         <a href="/news_delete/{{ user_list[user - 1].id }}"
                            class="btn btn-danger">{{data[lang]['delete']}}</a>
                     </div>
+                    {% endif %}
                     {% endif %}
                 </div>
                 <div>
@@ -49,14 +52,16 @@
                                 alt="" ,
                                 height="400" , width="200"></a>
                     </div>
-                    {% if current_user.is_authenticated and current_user.id == 1%}
+                    {% if current_user.is_authenticated%}
                     <a style="margin-top:15px;" href="/reviews_add_one/{{ user_list[user].id }}"
                        class="btn btn-info">{{data[lang]['add_review']}}</a>
+                    {% if current_user.is_authenticated and current_user.id == 1%}
                     <div>
                         <a href="/news/{{ user_list[user].id }}" class="btn btn-warning">{{data[lang]['change']}}</a>
                         <a href="/news_delete/{{ user_list[user].id }}"
                            class="btn btn-danger">{{data[lang]['delete']}}</a>
                     </div>
+                    {% endif %}
                     {% endif %}
                 </div>
             </div>
@@ -71,15 +76,17 @@
                             alt="" ,
                             height="400" , width="200"></a>
                 </div>
-                {% if current_user.is_authenticated and current_user.id == 1%}
+                {% if current_user.is_authenticated %}
                 <a style="margin-top:15px;"
                    href="/reviews_add_one/{{ user_list[user_list|length - 1].id }}"
                    class="btn btn-info">{{data[lang]['add_review']}}</a>
+                {% if current_user.is_authenticated and current_user.id == 1%}
                 <div>
                     <a href="/news/{{ user_list[user_list|length - 1].id }}" class="btn btn-warning">{{data[lang]['change']}}</a>
                     <a href="/news_delete/{{ user_list[user_list|length - 1].id }}"
                        class="btn btn-danger">{{data[lang]['delete']}}</a>
                 </div>
+                {% endif %}
                 {% endif %}
             </div>
             {% endif %}
